--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,32 @@ stages:
       displayName: "Terraform validate"
 
     - task: AzureCLI@2
+      displayName: "Terraform import RG if exists"
+      inputs:
+        azureSubscription: "SC-Azure-Terraform426"
+        scriptType: "ps"
+        scriptLocation: "inlineScript"
+        inlineScript: |
+          $rgName = "$(TF_RG_NAME)"
+          
+          # Check if RG exists in Azure
+          $exists = az group exists --name $rgName
+          if ($exists -eq "true") {
+            $subId = az account show --query id -o tsv
+            Write-Host "RG '$rgName' exists. Importing into Terraform state..."
+            terraform import `
+              -var="location=$(TF_LOCATION)" `
+              -var="rg_name=$(TF_RG_NAME)" `
+              -var="storage_account_name=$(TF_SA_NAME)" `
+              -var="container_name=$(TF_CONTAINER_NAME)" `
+              -var="env=$(TF_ENV)" `
+              azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName" || true
+          }
+          else {
+            Write-Host "RG '$rgName' does not exist. Terraform will create it."
+          }
+
+    - task: AzureCLI@2
       displayName: "Terraform plan"
       inputs:
         azureSubscription: "SC-Azure-Terraform426"
@@ -102,35 +128,6 @@ stages:
                   -backend-config="storage_account_name=$(TFSTATE_STORAGE)" `
                   -backend-config="container_name=$(TFSTATE_CONTAINER)" `
                   -backend-config="key=$(TFSTATE_KEY)"
-
-          - task: AzureCLI@2
-            displayName: "Terraform import RG if exists (safe)"
-            inputs:
-              azureSubscription: "SC-Azure-Terraform426"
-              scriptType: "ps"
-              scriptLocation: "inlineScript"
-              inlineScript: |
-                $ErrorActionPreference = "Continue"
-
-                # Make sure backend is initialized (do this earlier in pipeline)
-                $rgName = "$(TF_RG_NAME)"
-                
-                # Check if RG exists in Azure
-                $exists = az group exists --name $rgName
-                if ($exists -eq "true") {
-                  $subId = az account show --query id -o tsv
-                  Write-Host "RG '$rgName' exists. Importing into Terraform state..."
-                  terraform import `
-                    -var="location=$(TF_LOCATION)" `
-                    -var="rg_name=$(TF_RG_NAME)" `
-                    -var="storage_account_name=$(TF_SA_NAME)" `
-                    -var="container_name=$(TF_CONTAINER_NAME)" `
-                    -var="env=$(TF_ENV)" `
-                    azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName"
-                }
-                else {
-                  Write-Host "RG '$rgName' does not exist. No import needed."
-                }
 
           - task: AzureCLI@2
             displayName: "Terraform apply (from plan)"
