--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ stages:
               -var="storage_account_name=$(TF_SA_NAME)" `
               -var="container_name=$(TF_CONTAINER_NAME)" `
               -var="env=$(TF_ENV)" `
-              azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName" || true
+              azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName" -ErrorAction Continue
           }
           else {
             Write-Host "RG '$rgName' does not exist. Terraform will create it."
