Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,13 @@ stages:
           if ($exists -eq "true") {
             $subId = az account show --query id -o tsv
             Write-Host "RG '$rgName' exists. Importing into Terraform state..."
-            terraform import azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName" -ErrorAction Continue
+            try {
+              terraform import azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName"
+              Write-Host "Import successful."
+            }
+            catch {
+              Write-Host "Import failed or RG already imported: $_"
+            }
           }
           else {
             Write-Host "RG '$rgName' does not exist. Terraform will create it."
