code changed in YAML file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,13 @@ stages:
             $subId = az account show --query id -o tsv
             Write-Host "RG '$rgName' exists. Importing into Terraform state..."
             try {
-              terraform import -lock=false -input=false azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName"
+              terraform import -lock=false -input=false `
+                -var="location=$(TF_LOCATION)" `
+                -var="rg_name=$(TF_RG_NAME)" `
+                -var="storage_account_name=$(TF_SA_NAME)" `
+                -var="container_name=$(TF_CONTAINER_NAME)" `
+                -var="env=$(TF_ENV)" `
+                azurerm_resource_group.rg "/subscriptions/$subId/resourceGroups/$rgName"
               Write-Host "Import successful."
             }
             catch {
