code changed dev>>null

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ stages:
           }
           
           # Check if Storage Account exists in Azure
-          $saExists = az storage account exists --name $saName --resource-group $rgName --query exists -o tsv 2>/dev/null
+          $saExists = az storage account exists --name $saName --resource-group $rgName --query exists -o tsv 2>$null
           if ($saExists -eq "true") {
             Write-Host "Storage Account '$saName' exists. Checking if already in Terraform state..."
             
